--- a/templates/about.html
+++ b/templates/about.html
@@ -27,10 +27,10 @@ About ShortLink
             data-bs-toggle="tooltip"
             data-bs-placement="top"
             data-bs-custom-class="custom-tooltip"
-            data-bs-title="Visit my GitHub"
+            data-bs-title="Visit my Website"
             target="_blank"
-            href="https://github.com/haidar038"
-            >M. Khaidar</a
+            href="https://nizarr.my.id"
+            >Nizar Rahman</a
         >, I am dedicated to providing you with the best solutions for shortening and managing your URLs. As a solo developer, I have
         utilized cutting-edge technology such as Python, Flask, SQLite, and Bootstrap to create a fast and reliable service that is both
         easy to use and visually appealing.
