--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,9 +19,9 @@
                         data-bs-toggle="tooltip"
                         data-bs-placement="top"
                         data-bs-custom-class="custom-tooltip"
-                        data-bs-title="M Khaidar"
+                        data-bs-title="Nizar Rahman"
                         target="_blank"
-                        href="https://facebook.com/haidar038"
+                        href="https://www.facebook.com/HMMMMMMMMMMK/"
                     >
                         <img src="{{ url_for('static', filename='img/svg/Facebook.svg' ) }}" alt="" />
                     </a>
@@ -31,9 +31,9 @@
                         data-bs-toggle="tooltip"
                         data-bs-placement="top"
                         data-bs-custom-class="custom-tooltip"
-                        data-bs-title="haidar038@gmail.com"
+                        data-bs-title="rnizar221@gmail.com"
                         target="_blank"
-                        href="https://mail.google.com/mail/?view=cm&fs=1&to=haidar038@gmail.com"
+                        href="https://mail.google.com/mail/?view=cm&fs=1&to=rnizar221@gmail.com"
                     >
                         <img src="{{ url_for('static', filename='img/svg/Google.svg' ) }}" alt="" />
                     </a>
@@ -43,33 +43,9 @@
                         data-bs-toggle="tooltip"
                         data-bs-placement="top"
                         data-bs-custom-class="custom-tooltip"
-                        data-bs-title="M. Khaidar"
+                        data-bs-title="Nizar Rahman"
                         target="_blank"
-                        href="https://www.linkedin.com/in/haidar038/"
-                    >
-                        <img src="{{ url_for('static', filename='img/svg/LinkedIn.svg' ) }}" alt="" />
-                    </a>
-                </div>
-                <div class="d-flex flex-column justify-content-center">
-                    <a
-                        data-bs-toggle="tooltip"
-                        data-bs-placement="top"
-                        data-bs-custom-class="custom-tooltip"
-                        data-bs-title="Eternal Code"
-                        target="_blank"
-                        href="https://twitter.com/etercode_"
-                    >
-                        <img src="{{ url_for('static', filename='img/svg/Twitter.svg' ) }}" alt="" />
-                    </a>
-                </div>
-                <div class="d-flex flex-column justify-content-center">
-                    <a
-                        data-bs-toggle="tooltip"
-                        data-bs-placement="top"
-                        data-bs-custom-class="custom-tooltip"
-                        data-bs-title="M. Khaidar"
-                        target="_blank"
-                        href="https://instagram.com/m.haidar___30"
+                        href="https://instagram.com/nizarrrahman.f_"
                     >
                         <img src="{{ url_for('static', filename='img/svg/Instagram.svg' ) }}" alt="" />
                     </a>
